# vtz

./: .gitignore  CLAUDE.md  CODEX.md  LICENSE  README.md  install.sh  package.json
native/: Cargo.toml
native/vertz-compiler/: Cargo.toml  package.json
native/vertz-compiler-core/: Cargo.toml
native/vertz-compiler-core/src/: aot_string_transformer.rs  body_jsx_diagnostics.rs  component_analyzer.rs  computed_transformer.rs  context_stable_ids.rs  css_diagnostics.rs  css_token_tables.rs  css_transform.rs  fast_refresh.rs  field_selection.rs  hydration_markers.rs  import_injection.rs  jsx_transformer.rs  lib.rs  magic_string.rs  mount_frame_transformer.rs  mutation_analyzer.rs  mutation_diagnostics.rs  mutation_transformer.rs  prefetch_manifest.rs  props_transformer.rs  query_auto_thunk.rs  reactivity_analyzer.rs  route_splitting.rs  signal_api_registry.rs  signal_transformer.rs  ssr_safety_diagnostics.rs  typescript_strip.rs  utils.rs
native/vertz-compiler/__tests__/: aot-ssr.test.ts  benchmark.test.ts  body-jsx-diagnostics.test.ts  build-transform-parity.test.ts  component-analysis.test.ts  computed-transform.test.ts  context-stable-ids.test.ts  cross-compiler-equivalence.test.ts  cross-file-manifest.test.ts  css-diagnostics.test.ts  css-transform.test.ts  fast-refresh.test.ts  field-selection.test.ts  hydration-markers.test.ts  import-injection.test.ts  jsx-transform.test.ts  mount-frame.test.ts  mutation-diagnostics.test.ts  mutation-transform.test.ts  native-compiler.test.ts  parity-1911.test.ts  prefetch-manifest.test.ts  props-destructuring.test.ts  query-auto-thunk.test.ts  reactivity-analysis.test.ts  route-splitting.test.ts  signal-transform.test.ts  ssr-safety-diagnostics.test.ts  typescript-strip.test.ts
native/vertz-compiler/__tests__/parity/: app-file-parity.test.ts  build-transform-benchmark.test.ts
native/vertz-compiler/src/: lib.rs
native/vtz/: Cargo.toml  build.rs
native/vtz/benches/: crud_benchmark.rs
native/vtz/examples/: webview_poc.rs
native/vtz/src/: banner.rs  cli.rs  config.rs  env.rs  lib.rs  main.rs  tsconfig.rs
native/vtz/src/assets/: error-overlay.js  fast-refresh-helpers.js  fast-refresh-runtime.js  hmr-client.js  react-refresh-runtime.js  react-refresh-setup.js
native/vtz/src/compiler/: cache.rs  css_transform.rs  env_replacer.rs  import_rewriter.rs  mod.rs  pipeline.rs  postcss.rs
native/vtz/src/errors/: broadcaster.rs  categories.rs  mod.rs  source_mapper.rs  suggestions.rs  terminal.rs
native/vtz/src/hmr/: mod.rs  protocol.rs  recovery.rs  websocket.rs
native/vtz/src/native_handler/: access_rules.rs  jwt.rs  mod.rs  response.rs  sql_builder.rs
native/vtz/src/plugin/: mod.rs  react.rs  vertz.rs
native/vtz/src/pm/: bin.rs  cache.rs  config.rs  create.rs  github.rs  linker.rs  lockfile.rs  mod.rs  output.rs  overrides.rs  pack.rs  patch.rs  registry.rs  resolver.rs  scripts.rs  tarball.rs  types.rs  vertzrc.rs  workspace.rs
native/vtz/src/proxy/: client.rs  daemon.rs  host.rs  hosts.rs  mod.rs  naming.rs  routes.rs  tls.rs
native/vtz/src/runtime/: async_context.rs  compile_cache.rs  js_runtime.rs  mod.rs  module_loader.rs  persistent_isolate.rs
native/vtz/src/runtime/ops/: async_context.rs  clone.rs  console.rs  crypto.rs  crypto_subtle.rs  e2e.rs  e2e_bootstrap.js  encoding.rs  env.rs  fetch.rs  fs.rs  microtask.rs  mod.rs  os.rs  path.rs  performance.rs  sqlite.rs  streams.rs  timers.rs  url.rs  web_api.rs
native/vtz/src/server/: api_proxy.rs  console_log.rs  css_server.rs  diagnostics.rs  html_shell.rs  http.rs  logging.rs  mcp.rs  mcp_events.rs  mod.rs  module_server.rs  theme_css.rs
native/vtz/src/ssr/: async_local_storage.rs  css_collector.rs  dom_shim.rs  html_document.rs  hydration.rs  mod.rs  render.rs  session.rs
native/vtz/src/test/: codemod.rs  collector.rs  config.rs  coverage.rs  dom_shim.rs  e2e_runner.rs  executor.rs  globals.rs  mod.rs  runner.rs  snapshot.rs  typetests.rs  watch.rs
native/vtz/src/test/reporter/: json.rs  junit.rs  mod.rs  terminal.rs
native/vtz/src/typecheck/: mod.rs  parser.rs  process.rs
native/vtz/src/watcher/: dep_watcher.rs  file_watcher.rs  mod.rs  module_graph.rs
native/vtz/src/webview/: bridge.rs  mod.rs
native/vtz/tests/: client_render.rs  error_overlay.rs  pm_integration.rs  pm_introspection.rs  pm_publish.rs  sqlite_integration.rs  ssr_render.rs  static_serving.rs  test_runner.rs  v8_integration.rs
native/vtz/tests/fixtures/js-modules/: config.js  entry.js  utils.js
native/vtz/tests/fixtures/linear-clone-app/: package.json
native/vtz/tests/fixtures/minimal-app/: package.json
native/vtz/tests/fixtures/public/: index.html
(+81 files in other folders)
