[package]
name = "vertz-compiler-core"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
oxc_allocator = "0.122.0"
oxc_ast = "0.122.0"
oxc_ast_visit = "0.122.0"
oxc_codegen = "0.122.0"
oxc_parser = "0.122.0"
oxc_span = "0.122.0"
oxc_syntax = "0.122.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
