[package]
name = "vtz"
version = "0.0.2"
edition = "2021"

[lib]
name = "vertz_runtime"
path = "src/lib.rs"

[[bin]]
name = "vtz"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
deno_core = "0.311.0"
flate2 = "1"
fs2 = "0.4"
futures-util = "0.3"
glob = "0.3"
libc = "0.2"
walkdir = "2"
indicatif = "0.17"
local-ip-address = "0.6"
node-semver = "2"
notify = "6"
owo-colors = "4"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ring = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
similar = "2"
sha2 = "0.10"
url = "2"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
uuid = { version = "1", features = ["v4"] }
vertz-compiler-core = { path = "../vertz-compiler-core" }
which = "7"
oxc_transformer = "0.122.0"
oxc_allocator = "0.122.0"
oxc_parser = "0.122.0"
oxc_span = "0.122.0"
oxc_codegen = "0.122.0"
oxc_semantic = "0.122.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"

[[bench]]
name = "crud_benchmark"
harness = false
